# song_sheet

./: .gitignore  Cargo.toml  Foot.tex  Head.tex  config  ss.aux  ss.fdb_latexmk  ss.fls  ss.idx  ss.ilg  ss.ind  ss.tex  vs.tex
SongBooks/: Bible Verses.json  Bible Verses.json.bak  Bible Verses.json.ignore  Bon Accord Hymns 2.json  Bon Accord Hymns 2.json.bak  Bon Accord Hymns 2.json.ignore  Bon Accord Hymns 3.json.ignore  Bon Accord Hymns 4.json.ignore  Bon Accord Hymns 5.json.ignore  Bon Accord Hymns 6.json.ignore  Bon Accord Hymns.json.bak  Bon Accord Hymns.json.ignore  Psalm 130 2.json.ignore  Psalm 130.json.bak  Psalm 130.json.ignore  Psalms (Scottish Psalter).json  Psalms (Scottish Psalter).json.bak  Psalms (Scottish Psalter).json.ignore  Psalms.json.ignore  Sing Psalms (S).json  Sing Psalms (S).json.bak  Sing Psalms (Specific).json.ignore
Songs/: ASafeStronghold.tex  AsTheDeerPants.tex  BecauseHeLives.tex  BecauseHeLives.txt  Deer.txt
VS/: BonAccordHymns.json  SingScripture.json
src/: config.rs  error.rs  errors.rs  latex.rs  lib.rs  main.rs  parser.rs  song.rs
src/parser/: mod.rs  plain_text.rs  video_psalm.rs
