[package]
name = "song_sheet"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
error-stack = "0.3.1"
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
