[package]
name = "song_sheet"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
error-stack = "0.3.1"
log = { version = "0.4.17", features = ["release_max_level_warn"] }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7"

[[bin]]
name = "song_sheet"
path = "src/bin/song_sheet.rs"

[[bin]]
name = "parse_json"
path = "src/bin/parse_json.rs"

